--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,58 @@
 /* Variable Declaration */
 :root{
-    
+    --font-colour: #D9DBDE;
+    --background-color: #202124; 
 }
 
 /* Lazy Placeholders */
 *{
-    background-color: #202124;
-    color: #D9DBDE;
+    background-color: var(--background-color);
+    color: var(--font-colour);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+h1{
+    font-size: 30px;
+}
 
+h2{
+    font-size: 20px;
+}
 
-/* flexbox stuff */
+/* flexbox container for header */
 .flexbox-container-header{
 display: flex;
 flex-wrap: wrap;
 column-gap: 15px;
 }
 
+/* pushes content to far right of screen */
 .push{
     margin-left: auto;
 }
 
+/* flexbox container for the body */
 .flexbox-container-body{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
 }
 
-.flexbox{
-
+/* this holds the content in cool flex boxes that will have hover 
+properties and be clickable */
+.bodybox{
+    flex:1;
+    margin: 2px;
+    text-align: auto;
+    padding: 5px;;
+    border: #D9DBDE solid ;
+    /* background-color: #cda4ff; */
 }
+
+h3{
+    padding-right: 15px;
+    border-right: 1px solid white;
+}
+
+
