added css variables

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,6 +1,13 @@
 :root{
-    
+    --main-font-colour:  ;
+    --main-title-size:  ;
+    --quick-link-size:  ;
+    --left-bar-size:  ;
+    --general-text-size:  ;
+    --footer-text-size:  ;
+
 }
+
 
 *{
 
