--- a/Assets/style.css
+++ b/Assets/style.css
@@ -36,6 +36,38 @@
     text-decoration: none;
 }
 
+/* !!! End of Header Section Code!!!  */
+
+
+
+
+/* About Me */
+.main-content-section{
+    
+}
+
+h2{
+    color: var(--main-font-colour);
+    font-size: var(--left-bar-size);
+    
+}
+
+.body-element{
+
+}
+
+
+
+/* End of About Me */
+
+
+/* Projects Section */
+
+/* sets the display types for the overall sections of the website, about me, projects, etc */
+
+/* End of Projects Section */
+
+
 /* makes header content align better on tablet screens */
 @media only screen and (max-width: 768px) {
     .header-container{
@@ -55,34 +87,3 @@
         text-align: center;
     }
 }
-
-/* !!! End of Header Section Code!!!  */
-
-
-
-
-/* About Me */
-.main-content-section{
-    width: 80%;
-    display: flex;
-}
-
-h2{
-    color: var(--main-font-colour);
-    width: 100px;
-}
-
-.body-element{
-
-}
-
-
-
-/* End of About Me */
-
-
-/* Projects Section */
-
-/* sets the display types for the overall sections of the website, about me, projects, etc */
-
-/* End of Projects Section */
