--- a/Assets/style.css
+++ b/Assets/style.css
@@ -3,7 +3,7 @@
     --main-title-size: 50px ;
     --quick-link-size: 30px ;
     --left-bar-size: 30px ;
-    --general-text-size: 25px ;
+    --general-text-size: 20px ;
     --footer-text-size:  ;
 }
 
@@ -30,6 +30,12 @@
     font-size: var(--main-title-size);
 }
 
+.avatar{
+    height: 100px;
+    padding: 5px;
+    margin: 5px;
+}
+
 /* For modifying the quic link section and removes underline */
 .header-container a{
     font-size: var(--quick-link-size);
@@ -43,16 +49,31 @@
 
 /* About Me */
 .main-content-section{
-    
+    size: var(--general-text-size);
+    width: 90%;
+    display: flex;
+    padding: 5px;
+    margin: 5px;
+    align-items: center;
 }
 
 h2{
     color: var(--main-font-colour);
     font-size: var(--left-bar-size);
-    
+    flex: 0 0 150px;
+    padding: 5px;
+    margin: 5px;
+    margin-right: 10px;
+    border-right: solid #DFDFDF;
+    text-align: end;
 }
 
+
+
 .body-element{
+    font-size: var(--general-text-size);
+    padding: 5px;
+    margin: 5px;
 
 }
 
@@ -76,6 +97,20 @@ h2{
     .header-container h1{
     text-align: center;
     width: 100%;
+  }
+    .avatar{
+    width: 100%;
+    height: 100%;
+    }
+  .main-content-section{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  h2{
+    flex: 1;
+    border-right: #1F1F1F;
   }
 }
 /* fills content to screen on phone sizes */
