add hover effect to project boxes

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -99,6 +99,10 @@ h2{
     position: relative;
 }
 
+.floating-container:hover{
+    transform: scale(1.01);
+}
+
 /* this is the pre-mentioned text, this overlays it on image  */
 .floating-text{
     font-size: var(--general-text-size);
